syntax = "proto3";
package protostudio;
option java_package="com.lecture.automatic.grpc";
option java_outer_classname="StudentProto";
option java_multiple_files=true;

service StudentService{
    rpc getRealNameByUsername(MyRequest) returns (MyResponse){}
}
message MyRequest{
    string username=1;
}
message MyResponse{
    string realname=2;
}